# state-preparation-compilation

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: compare_t_cost.py  plot_results.py
src/qsp/: __init__.py  circuit_utils.py  metrics.py  state.py
src/qsp/qrom/: alias_sampling.py  synthesis.py
src/qsp/rotation/: common.py  dense.py  sparse.py
tests/: test_alias_sampling.py  test_dense.py  test_qrom.py  test_sparse.py  test_state.py
