[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp"
version = "0.1.0"
description = "Quantum State Preparation: rotation-based and QROM-based algorithms"
dependencies = [
    "qiskit>=1.2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
